--- a/index.html
+++ b/index.html
@@ -3,11 +3,18 @@
 
     </head>
     <body>
+        <div style="background-image: url(img/flag.jpg);">
+            <div>
+                <a href="https://tsukinamiseikai-gaiadivision.github.io/">
+                    <s scr="img/logo.png" title="home">
+                </a>
+            </div>
         <h1>
             WELCOME TO ACCELERATIONISTIC GAIA DIVISION
         </h1>
         <h3>
             SATIFACTION-LIBERTY-PURIFICATION
         </h3>
+        </div>
     </body>
 </html>
