--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
     <head>
 
     </head>
-    <body>
-        <div style="background-image: url(img/flag.jpg);">
+    <body style="background-image: url(img/flag.jpg);">
+        <div>
             <div>
                 <a href="https://tsukinamiseikai-gaiadivision.github.io/">
                     <s scr="img/logo.png" title="home">
