--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <html>
     <head>
-
+        <style>
+            body { background-image: url(img/flag.jpg);
+                    background-repeat: no-repeat;
+        }
+        </style>
     </head>
-    <body style="background-image: url(img/flag.jpg);">
+    <body>
         <div>
             <div>
                 <a href="https://tsukinamiseikai-gaiadivision.github.io/">
