--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <div>
             <div>
                 <a href="https://tsukinamiseikai-gaiadivision.github.io/">
-                    <s scr="img/logo.png" title="home">
+                    <s src="img/logo.png" title="home">
                 </a>
             </div>
         <h1>
