--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
     <head>
+        <title>AGD</title>
+        <link rel="icon" href="/img/logo.png">
         <style>
             body { background-image: url(img/flag.jpg);
                     background-repeat: no-repeat;
@@ -10,7 +12,7 @@
         <div>
             <div>
                 <a href="https://tsukinamiseikai-gaiadivision.github.io/">
-                    <s src="img/logo.png" title="home">
+                    <img src="img/logo.png" title="home">
                 </a>
             </div>
         <h1>
