--- a/index.html
+++ b/index.html
@@ -12,9 +12,31 @@
         <div>
             <div>
                 <a href="https://tsukinamiseikai-gaiadivision.github.io/">
-                    <img src="img/logo.png" title="home">
+                    <img src="img/logo.png" title="home" style="width:150px; height:150px;">
                 </a>
             </div>
+            <div>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+            </div>
+  
         <h1>
             WELCOME TO ACCELERATIONISTIC GAIA DIVISION
         </h1>
