--- a/index.html
+++ b/index.html
@@ -5,15 +5,29 @@
         <style>
             body { background-image: url(img/flag.jpg);
                     background-repeat: no-repeat;
+                    background-size: 1700px 850px;
         }
         </style>
+        <link href="styles/style.css" rel="stylesheet" type="text/css" />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Zalando+Sans:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
     </head>
     <body>
-        <div>
-            <div>
-                <a href="https://tsukinamiseikai-gaiadivision.github.io/">
-                    <img src="img/logo.png" title="home" style="width:150px; height:150px;">
-                </a>
+        <div style="height: 5000px; overflow-y: scroll;">
+            <div class="UPPERBAR">
+                <div class="UB2">
+                    <a href="https://tsukinamiseikai-gaiadivision.github.io/">
+                        <img src="img/logo.png" title="home" style="width:150px; height:150px;">
+                    </a>
+                </div>
+                <ui class="UB1">
+                    <li><a href="https://tsukinamiseikai-gaiadivision.github.io/info" title="what about us">INFO</a></li>
+                    <li><a href="https://tsukinamiseikai-gaiadivision.github.io/philosophy" title="our philosophy">OUR PHILOSOHPY</a></li>
+                    <li><a href="https://tsukinamiseikai-gaiadivision.github.io/news" title="news">NEWS</a></li>
+                    <li><a href="https://tsukinamiseikai-gaiadivision.github.io/creation" title="creation">CREATION</a></li>
+                    <li><a href="https://tsukinamiseikai-gaiadivision.github.io/hero" title="hero">HERO</a></li>
+                </ui>
             </div>
             <div>
                 <br>
@@ -35,14 +49,41 @@
                 <br>
                 <br>
                 <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
             </div>
-  
-        <h1>
-            WELCOME TO ACCELERATIONISTIC GAIA DIVISION
-        </h1>
-        <h3>
-            SATIFACTION-LIBERTY-PURIFICATION
-        </h3>
+            <div style="text-align: center;">
+                <h1>
+                    WELCOME TO ACCELERATIONISTIC GAIA DIVISION
+                </h1>
+                <h3>
+                    SATIFACTION-LIBERTY-PURIFICATION
+                </h3>
+                <h5>
+                    What About Us?
+                </h5>
+                <p>We are <b>GAIA DIVISION</b></p>
+                <p>After The birth of us, The pain start to attack us. we feel the pain until we are dead. but, why didn't blame it?</p>
+                <p>We are not just neighborhood neo-nazi or indiidualist anarchist. We researched and investigated how we stop the pain.</p>
+                <p>Finally, It approached uncomfortable truth.</p>
+                <p>Don't afraid or ignore it. We behave for real liberty, our neighbor and mankind.</p>
+                <p>We thought you can't understand it easily. Yes. The Truth is so uncomfortable.</p>
+                <p>The True Story That Is Never Told.</p>
+                <i><strong>CHECK WHAT WE FOUND NOW</strong></i>  <li><a href="https://tsukinamiseikai-gaiadivision.github.io/philosophy" title="our philosophy">OUR PHILOSOHPY</a></li>
+            </div>
         </div>
     </body>
 </html>
