--- a/index.html
+++ b/index.html
@@ -1,89 +1,136 @@
-<html>
-    <head>
-        <title>AGD</title>
-        <link rel="icon" href="/img/logo.png">
-        <style>
-            body { background-image: url(img/flag.jpg);
-                    background-repeat: no-repeat;
-                    background-size: 1700px 850px;
-        }
-        </style>
-        <link href="styles/style.css" rel="stylesheet" type="text/css" />
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Zalando+Sans:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
-    </head>
-    <body>
-        <div style="height: 5000px; overflow-y: scroll;">
-            <div class="UPPERBAR">
-                <div class="UB2">
-                    <a href="https://tsukinamiseikai-gaiadivision.github.io/">
-                        <img src="img/logo.png" title="home" style="width:150px; height:150px;">
-                    </a>
-                </div>
-                <ui class="UB1">
-                    <li><a href="https://tsukinamiseikai-gaiadivision.github.io/info" title="what about us">INFO</a></li>
-                    <li><a href="https://tsukinamiseikai-gaiadivision.github.io/philosophy" title="our philosophy">OUR PHILOSOHPY</a></li>
-                    <li><a href="https://tsukinamiseikai-gaiadivision.github.io/news" title="news">NEWS</a></li>
-                    <li><a href="https://tsukinamiseikai-gaiadivision.github.io/creation" title="creation">CREATION</a></li>
-                    <li><a href="https://tsukinamiseikai-gaiadivision.github.io/hero" title="hero">HERO</a></li>
-                </ui>
-            </div>
-            <div>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-            </div>
-            <div style="text-align: center;">
-                <h1>
-                    WELCOME TO ACCELERATIONISTIC GAIA DIVISION
-                </h1>
-                <h3>
-                    SATIFACTION-LIBERTY-PURIFICATION
-                </h3>
-                <h5>
-                    What About Us?
-                </h5>
-                <p>We are <b>GAIA DIVISION</b></p>
-                <p>After The birth of us, The pain start to attack us. we feel the pain until we are dead. but, why didn't blame it?</p>
-                <p>We are not just neighborhood neo-nazi or indiidualist anarchist. We researched and investigated how we stop the pain.</p>
-                <p>Finally, It approached uncomfortable truth.</p>
-                <p>Don't afraid or ignore it. We behave for real liberty, our neighbor and mankind.</p>
-                <p>We thought you can't understand it easily. Yes. The Truth is so uncomfortable.</p>
-                <p>The True Story That Is Never Told.</p>
-                <i><strong>CHECK WHAT WE FOUND NOW</strong></i>  <li><a href="https://tsukinamiseikai-gaiadivision.github.io/philosophy" title="our philosophy">OUR PHILOSOHPY</a></li>
-            </div>
-        </div>
-    </body>
+<!doctype html>
+<html lang="ko">
+<head>
+  <meta charset="utf-8" />
+  <title>AND</title>
+  <link rel="icon" href="/img/logo.png">
+  <link href="styles/style.css" rel="stylesheet" type="text/css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Zalando+Sans:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
+</head>
+<body>
+  <div style="height: 5000px; overflow-y: scroll;">
+    <div class="UPPERBAR">
+      <div class="UB2">
+        <a href="https://tsukinamiseikai-gaiadivision.github.io/">
+          <img src="img/logo.png" title="home" style="width:150px; height:150px;">
+        </a>
+      </div>
+      <ul class="UB1">
+        <li><a href="https://tsukinamiseikai-neutrondivision.github.io/info" title="what about us">INFO</a></li>
+        <li><a href="https://tsukinamiseikai-neutrondivision.github.io/philosophy" title="our philosophy">OUR PHILOSOPHY</a></li>
+        <li><a href="https://tsukinamiseikai-neutrondivision.github.io/news" title="news">NEWS</a></li>
+        <li><a href="https://tsukinamiseikai-neutrondivision.github.io/creation" title="creation">CREATION</a></li>
+        <li><a href="https://tsukinamiseikai-neutrondivision.github.io/hero" title="hero">HERO</a></li>
+      </ul>
+    </div>
+
+    <div class="wrap" style="text-align: center;">
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+      <h1>WELCOME TO ACCELERATIONISTIC NEUTRON DIVISION</h1>
+      <h3>SATISFACTION - LIBERTY - PURIFICATION</h3>
+      <h5>What About Us?</h5>
+      <p>We are <b>NEUTRON DIVISION</b></p>
+      <p>After The birth of us, The pain start to attack us. we feel the pain until we are dead. but, why didn't blame it?</p>
+      <p>We are not just neighborhood neo-nazi or individualist anarchist. We researched and investigated how we stop the pain.</p>
+      <p>Finally, It approached uncomfortable truth.</p>
+      <p>Don't afraid or ignore it. We behave for real liberty, our neighbor and mankind.</p>
+      <p>We thought you can't understand it easily. Yes. The Truth is so uncomfortable.</p>
+      <p>The True Story That Is Never Told.</p>
+      <i><strong>CHECK WHAT WE FOUND NOW</strong></i>
+      <li><a href="https://tsukinamiseikai-gaiadivision.github.io/philosophy" title="our philosophy">OUR PHILOSOPHY</a></li>
+    </div>
+
+    <div class="SCROLLPOSTER">
+      <button class="btn btn-left" id="btnPrev">◀</button>
+      <button class="btn btn-right" id="btnNext">▶</button>
+      <div class="scroll-container" id="scroller"  style="display: flex; flex-direction: row;">
+        <div class="poster-card"><img src="img/poster/pr.jpg" alt="poster1"></div>
+        <div class="poster-card"><img src="img/poster/pr2.jpg" alt="poster2"></div>
+        <div class="poster-card"><img src="img/poster/pr3.jpg" alt="poster3"></div>
+      </div>
+    </div>
+  </div>
+
+  <script>
+    const scroller = document.getElementById('scroller');
+    const btnPrev = document.getElementById('btnPrev');
+    const btnNext = document.getElementById('btnNext');
+
+    let isDown = false;
+    let startX;
+    let scrollLeftStart;
+
+    scroller.addEventListener('pointerdown', (e) => {
+      isDown = true;
+      scroller.style.cursor = 'grabbing';
+      startX = e.clientX;
+      scrollLeftStart = scroller.scrollLeft;
+      scroller.setPointerCapture(e.pointerId);
+    });
+
+    scroller.addEventListener('pointermove', (e) => {
+      if (!isDown) return;
+      const dx = e.clientX - startX;
+      scroller.scrollLeft = scrollLeftStart - dx;
+    });
+
+    function stopDrag(e){
+      if(!isDown) return;
+      isDown = false;
+      scroller.style.cursor = 'grab';
+      try{ scroller.releasePointerCapture && scroller.releasePointerCapture(e && e.pointerId); }catch(e){}
+    }
+    scroller.addEventListener('pointerup', stopDrag);
+    scroller.addEventListener('pointercancel', stopDrag);
+    scroller.addEventListener('pointerleave', stopDrag);
+
+    scroller.addEventListener('wheel', (e) => {
+      if (Math.abs(e.deltaY) > 0) {
+        e.preventDefault();
+        scroller.scrollLeft += e.deltaY;
+      }
+    }, { passive: false });
+
+    function cardWidth(){
+      const card = scroller.querySelector('.poster-card');
+      const gap = parseInt(getComputedStyle(scroller).gap || 16);
+      return (card ? card.offsetWidth : 500) + gap;
+    }
+
+    btnPrev.addEventListener('click', ()=> scroller.scrollBy({left: -cardWidth(), behavior:'smooth'}));
+    btnNext.addEventListener('click', ()=> scroller.scrollBy({left:  cardWidth(), behavior:'smooth'}));
+  </script>
+</body>
 </html>
