--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   <link href="https://fonts.googleapis.com/css2?family=Zalando+Sans:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div style="height: 5000px; overflow-y: scroll;">
+  <div style="height: 5000px; overflow-y: scroll; background-image: url(img/flag.jpg); background-repeat: no-repeat; background-size: 1700px 850px;"">
     <div class="UPPERBAR">
       <div class="UB2">
-        <a href="https://tsukinamiseikai-gaiadivision.github.io/">
+        <a href="https://tsukinamiseikai-neutrondivision.github.io/">
           <img src="img/logo.png" title="home" style="width:150px; height:150px;">
         </a>
       </div>
@@ -80,6 +80,22 @@
         <div class="poster-card"><img src="img/poster/pr2.jpg" alt="poster2"></div>
         <div class="poster-card"><img src="img/poster/pr3.jpg" alt="poster3"></div>
       </div>
+    </div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <div>
+        <h1>NEW FLAG.</h1>
+        <p>3 Lines symbolize the 3 elements(government, company and others)</p>
+        <p>One line penetrating and 2 lines attached it symbolize braking them</p>
+        <p>4 stars symbolize our final destination</p>
+        <b>IT'S NOT NAZI OR ANARCHISM SYMBOL</b>
+        <div><img src="img/flag2.png"></div>
     </div>
   </div>
 
