--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
   <meta charset="utf-8" />
   <title>AND</title>
   <link rel="icon" href="/img/logo.png">
-  <link href="styles/style.css" rel="stylesheet" type="text/css" />
+  <link href="styles/style.css" rel="stylesheet" type="text/css"/>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Zalando+Sans:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div style="height: 5000px; overflow-y: scroll; background-image: url(img/flag.jpg); background-repeat: no-repeat; background-size: 1700px 850px;"">
+  <div style="height: 5000px; overflow-y: scroll; background-image: url(img/flag.jpg); background-repeat: no-repeat; background-size: 1700px 850px;">
     <div class="UPPERBAR">
       <div class="UB2">
         <a href="https://tsukinamiseikai-neutrondivision.github.io/">
