--- a/hero.html
+++ b/hero.html
@@ -1,10 +1,222 @@
 <html>
     <head>
-        <title>AGD</title>
+        <title>AGD - HERO</title>
         <link rel="icon" href="/img/logo.png">
-
+        <link href="styles/style.css" rel="stylesheet" type="text/css"/>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Zalando+Sans:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
     </head>
     <body>
+        <div style="height: 5000px; overflow-y: scroll; background-image: url(img/background1.jpg); background-repeat: no-repeat; background-size: 1700px 850px;">
+            <div class="UPPERBAR">
+            <div class="UB2">
+                <a href="https://tsukinamiseikai-neutrondivision.github.io/">
+                <img src="img/logo.png" title="home" style="width:150px; height:150px;">
+                </a>
+            </div>
+            <ul class="UB1">
+                <li><a href="https://tsukinamiseikai-neutrondivision.github.io/info" title="what about us">INFO</a></li>
+                <li><a href="https://tsukinamiseikai-neutrondivision.github.io/philosophy" title="our philosophy">OUR PHILOSOPHY</a></li>
+                <li><a href="https://tsukinamiseikai-neutrondivision.github.io/news" title="news">NEWS</a></li>
+                <li><a href="https://tsukinamiseikai-neutrondivision.github.io/creation" title="creation">CREATION</a></li>
+                <li><a href="https://tsukinamiseikai-neutrondivision.github.io/hero" title="hero">HERO</a></li>
+            </ul>
+            </div>
+            <div class="wrap" style="text-align: center;">
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <h1>THE HEROES OF THE WORLD</h1>
+                <h3>Justice can't be measured. It's made by US, NEUTRON DIVISION</h3>
+            </div>
+                <h1>HEROES OF BLACK DAWN</h1> <p>IDEOLOGY, ART, PHILOSOPHY</p>
+                <div class="SCROLLPOSTER">
+                    <button class="btn btn-left" id="btnPrev">◀</button>
+                    <button class="btn btn-right" id="btnNext">▶</button>
+                    <div class="scroll-container" id="scroller"  style="display: flex; flex-direction: row;">
+                        <div class="poster-card"><img src="img/hero/1.jpg" alt="poster1"></div>
+                        <div class="poster-card"><img src="img/hero/3.svg" alt="poster3"></div>
+                        <div class="poster-card"><img src="img/hero/4.webp" alt="poster3"></div>
+                        <div class="poster-card"><img src="img/hero/5.jpg" alt="poster3"></div>
+                        <div class="poster-card"><img src="img/hero/6.jpg" alt="poster3"></div>
+                        <div class="poster-card"><img src="img/hero/7.webp" alt="poster3"></div>
+                        <div class="poster-card"><img src="img/hero/8.webp" alt="poster3"></div>
+                        <div class="poster-card"><img src="img/hero/9.webp" alt="poster3"></div>
+                        <div class="poster-card"><img src="img/hero/9.jpg" alt="poster3"></div>
+                        <div class="poster-card"><img src="img/hero/10.jpg" alt="poster3"></div>
+                        <div class="poster-card"><img src="img/hero/11.jpg" alt="poster3"></div>
+                    </div>
+                </div>
+                <br>
+                <br>
+                <br>
+                <br>
+                <h1>HEROES OF ATOMKREIG</h1> <p>ACTIVIST, LEADER, POLITICS</p>
+                <div class="SCROLLPOSTER">
+                        <button class="btn btn-left" id="btnPrev">◀</button>
+                        <button class="btn btn-right" id="btnNext">▶</button>
+                        <div class="scroll-container" id="scroller"  style="display: flex; flex-direction: row;">
+                            <div class="poster-card"><img src="img/hero/12.jpg" alt="poster2"></div>
+                            <div class="poster-card"><img src="img/hero/14.png" alt="poster3"></div>
+                            <div class="poster-card"><img src="img/hero/15.jpg" alt="poster3"></div>
+                            <div class="poster-card"><img src="img/hero/16.jpg" alt="poster3"></div>
+                            <div class="poster-card"><img src="img/hero/17.jpg" alt="poster3"></div>
+                            <div class="poster-card"><img src="img/hero/18.jpg" alt="poster3"></div>
+                            <div class="poster-card"><img src="img/hero/19.jpg" alt="poster3"></div>
+                            <div class="poster-card"><img src="img/hero/24.jpg" alt="poster3"></div>
+                            <div class="poster-card"><img src="img/hero/25.jpg" alt="poster3"></div>
+                            <div class="poster-card"><img src="img/hero/26.jpg" alt="poster3"></div>
+                        </div>
+                </div>
+                <br>
+                <br>
+                <br>
+                <br>
+                <h1>MODERN DAYS</h1><p>MODERN ACTIVIST AND THINKER</p>
+                <div class="SCROLLPOSTER">
+                        <button class="btn btn-left" id="btnPrev">◀</button>
+                        <button class="btn btn-right" id="btnNext">▶</button>
+                        <div class="scroll-container" id="scroller"  style="display: flex; flex-direction: row;">
+                            <div class="poster-card"><img src="img/hero/29.jpg" alt="poster3"></div>
+                            <div class="poster-card"><img src="img/hero/2.jpg" alt="poster2"></div>
+                            <div class="poster-card"><img src="img/hero/22.jpg" alt="poster2"></div>
+                            <div class="poster-card"><img src="img/hero/20.png" alt="poster3"></div>
+                            <div class="poster-card"><img src="img/hero/21.jpg" alt="poster3"></div>
+                            <div class="poster-card"><img src="img/hero/23.jpg" alt="poster3"></div>
+                            <div class="poster-card"><img src="img/hero/27.jpg" alt="poster3"></div>
+                            <div class="poster-card"><img src="img/hero/13.webp" alt="poster3"></div>
+                        </div>
+                </div>
+                <br>
+                <br>
+                <br>
+                <br>
+                <h1>SPECIAL</h1><p>SPECIAL PEOPLE</p>
+                <div class="SCROLLPOSTER">
+                        <button class="btn btn-left" id="btnPrev">◀</button>
+                        <button class="btn btn-right" id="btnNext">▶</button>
+                        <div class="scroll-container" id="scroller"  style="display: flex; flex-direction: row;">
+                            <div class="poster-card"><img src="img/hero/30.jpg" alt="poster3"></div>
+                            <div class="poster-card"><img src="img/hero/31.jpg" alt="poster2"></div>
+                            <div class="poster-card"><img src="img/hero/32.jpg" alt="poster2"></div>
+                            <div class="poster-card"><img src="img/hero/33.jpg" alt="poster3"></div>
+                            <div class="poster-card"><img src="img/hero/34.jpg" alt="poster3"></div>
+                            <div class="poster-card"><img src="img/hero/35.jpg" alt="poster3"></div>
+                            <div class="poster-card"><img src="img/hero/36.jpg" alt="poster3"></div>
+                            <div class="poster-card"><img src="img/hero/37.jpg" alt="poster3"></div>
+                            <div class="poster-card"><img src="img/hero/38.jpg" alt="poster3"></div>
+                            <div class="poster-card"><img src="img/hero/38.webp" alt="poster3"></div>
+                            <div class="poster-card"><img src="img/hero/39.jpg" alt="poster3"></div>
+                            <div class="poster-card"><img src="img/hero/40.jpg" alt="poster3"></div>
+                            <div class="poster-card"><img src="img/hero/41.jpg" alt="poster3"></div>
+                            <div class="poster-card"><img src="img/hero/42.jpg" alt="poster3"></div>
+                            <div class="poster-card"><img src="img/hero/43.jpg" alt="poster3"></div>
+                            <div class="poster-card"><img src="img/hero/44.jpg" alt="poster3"></div>
+                            <div class="poster-card"><img src="img/hero/45.jpg" alt="poster3"></div>
+                            <div class="poster-card"><img src="img/hero/46.jpg" alt="poster3"></div>
+                            <div class="poster-card"><img src="img/hero/47.jpg" alt="poster3"></div>
+                        </div>
+                </div>
+        </div>
 
+        <script>
+document.querySelectorAll('.SCROLLPOSTER').forEach(container => {
+  const scroller = container.querySelector('.scroll-container');
+  const btnPrev = container.querySelector('.btn-left');
+  const btnNext = container.querySelector('.btn-right');
+  if (!scroller) return;
+
+  let isDown = false;
+  let startX = 0;
+  let scrollLeftStart = 0;
+
+
+  scroller.addEventListener('pointerdown', e => {
+    isDown = true;
+    scroller.style.cursor = 'grabbing';
+    startX = e.clientX;
+    scrollLeftStart = scroller.scrollLeft;
+    if (scroller.setPointerCapture) scroller.setPointerCapture(e.pointerId);
+  });
+
+  scroller.addEventListener('pointermove', e => {
+    if (!isDown) return;
+    const dx = e.clientX - startX;
+    scroller.scrollLeft = scrollLeftStart - dx;
+  });
+
+  const stopDrag = e => {
+    if (!isDown) return;
+    isDown = false;
+    scroller.style.cursor = 'grab';
+    try { scroller.releasePointerCapture(e.pointerId); } catch {}
+  };
+  scroller.addEventListener('pointerup', stopDrag);
+  scroller.addEventListener('pointercancel', stopDrag);
+  scroller.addEventListener('pointerleave', stopDrag);
+
+
+  scroller.addEventListener('wheel', e => {
+    if (Math.abs(e.deltaX) > Math.abs(e.deltaY)) {
+      
+      e.preventDefault();
+      scroller.scrollLeft += e.deltaX;
+    }
+  }, { passive: false });
+
+
+  function cardWidth() {
+    const card = scroller.querySelector('.poster-card');
+    const gap = parseFloat(getComputedStyle(scroller).gap) || 16;
+    return (card ? card.getBoundingClientRect().width : 500) + gap;
+  }
+  btnPrev.addEventListener('click', () => scroller.scrollBy({ left: -cardWidth(), behavior: 'smooth' }));
+  btnNext.addEventListener('click', () => scroller.scrollBy({ left:  cardWidth(), behavior: 'smooth' }));
+
+
+  setInterval(() => {
+    const card = scroller.querySelector('.poster-card');
+    const gap = parseFloat(getComputedStyle(scroller).gap) || 16;
+    const cardWidth = (card ? card.getBoundingClientRect().width : 500) + gap;
+    scroller.scrollBy({ left: cardWidth, behavior: 'smooth' });
+
+    if (scroller.scrollLeft + scroller.clientWidth >= scroller.scrollWidth - 5) {
+      scroller.scrollTo({ left: 0, behavior: 'smooth' });
+    }
+  }, 5000);
+});
+        </script>
     </body>
 </html>
