--- a/info.html
+++ b/info.html
@@ -1,10 +1,23 @@
 <html>
     <head>
-        <title>AGD</title>
+        <title>AND - info</title>
         <link rel="icon" href="/img/logo.png">
 
     </head>
     <body>
-
+        <div class="UPPERBAR">
+            <div class="UB2">
+                <a href="https://nameless-hoshi.github.io/NEUTRONDIVISION.io/">
+                <img src="img/logo.png" title="home" style="width:150px; height:150px;">
+                </a>
+            </div>
+            <ul class="UB1">
+                <li><a href="https://nameless-hoshi.github.io/NEUTRONDIVISION.io/info" title="what about us">INFO</a></li>
+                <li><a href="https://nameless-hoshi.github.io/NEUTRONDIVISION.io/philosophy" title="our philosophy">OUR PHILOSOPHY</a></li>
+                <li><a href="https://nameless-hoshi.github.io/NEUTRONDIVISION.io/news" title="news">NEWS</a></li>
+                <li><a href="https://nameless-hoshi.github.io/NEUTRONDIVISION.io/creation" title="creation">CREATION</a></li>
+                <li><a href="https://nameless-hoshi.github.io/NEUTRONDIVISION.io/hero" title="hero">HERO</a></li>
+            </ul>
+        </div>
     </body>
 </html>
