--- a/hero.html
+++ b/hero.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>AGD - HERO</title>
+        <title>AND - HERO</title>
         <link rel="icon" href="/img/logo.png">
         <link href="styles/style.css" rel="stylesheet" type="text/css"/>
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -11,16 +11,16 @@
         <div style="height: 5000px; overflow-y: scroll; background-image: url(img/background1.jpg); background-repeat: no-repeat; background-size: 1700px 850px;">
             <div class="UPPERBAR">
             <div class="UB2">
-                <a href="https://tsukinamiseikai-neutrondivision.github.io/">
+                <a href="https://nameless-hoshi.github.io/NEUTRONDIVISION.io/">
                 <img src="img/logo.png" title="home" style="width:150px; height:150px;">
                 </a>
             </div>
             <ul class="UB1">
-                <li><a href="https://tsukinamiseikai-neutrondivision.github.io/info" title="what about us">INFO</a></li>
-                <li><a href="https://tsukinamiseikai-neutrondivision.github.io/philosophy" title="our philosophy">OUR PHILOSOPHY</a></li>
-                <li><a href="https://tsukinamiseikai-neutrondivision.github.io/news" title="news">NEWS</a></li>
-                <li><a href="https://tsukinamiseikai-neutrondivision.github.io/creation" title="creation">CREATION</a></li>
-                <li><a href="https://tsukinamiseikai-neutrondivision.github.io/hero" title="hero">HERO</a></li>
+              <li><a href="https://nameless-hoshi.github.io/NEUTRONDIVISION.io/info" title="what about us">INFO</a></li>
+              <li><a href="https://nameless-hoshi.github.io/NEUTRONDIVISION.io/philosophy" title="our philosophy">OUR PHILOSOPHY</a></li>
+              <li><a href="https://nameless-hoshi.github.io/NEUTRONDIVISION.io/news" title="news">NEWS</a></li>
+              <li><a href="https://nameless-hoshi.github.io/NEUTRONDIVISION.io/creation" title="creation">CREATION</a></li>
+              <li><a href="https://nameless-hoshi.github.io/NEUTRONDIVISION.io/hero" title="hero">HERO</a></li>
             </ul>
             </div>
             <div class="wrap" style="text-align: center;">
@@ -152,71 +152,71 @@
         </div>
 
         <script>
-document.querySelectorAll('.SCROLLPOSTER').forEach(container => {
-  const scroller = container.querySelector('.scroll-container');
-  const btnPrev = container.querySelector('.btn-left');
-  const btnNext = container.querySelector('.btn-right');
-  if (!scroller) return;
+          document.querySelectorAll('.SCROLLPOSTER').forEach(container => {
+            const scroller = container.querySelector('.scroll-container');
+            const btnPrev = container.querySelector('.btn-left');
+            const btnNext = container.querySelector('.btn-right');
+            if (!scroller) return;
 
-  let isDown = false;
-  let startX = 0;
-  let scrollLeftStart = 0;
-
-
-  scroller.addEventListener('pointerdown', e => {
-    isDown = true;
-    scroller.style.cursor = 'grabbing';
-    startX = e.clientX;
-    scrollLeftStart = scroller.scrollLeft;
-    if (scroller.setPointerCapture) scroller.setPointerCapture(e.pointerId);
-  });
-
-  scroller.addEventListener('pointermove', e => {
-    if (!isDown) return;
-    const dx = e.clientX - startX;
-    scroller.scrollLeft = scrollLeftStart - dx;
-  });
-
-  const stopDrag = e => {
-    if (!isDown) return;
-    isDown = false;
-    scroller.style.cursor = 'grab';
-    try { scroller.releasePointerCapture(e.pointerId); } catch {}
-  };
-  scroller.addEventListener('pointerup', stopDrag);
-  scroller.addEventListener('pointercancel', stopDrag);
-  scroller.addEventListener('pointerleave', stopDrag);
+            let isDown = false;
+            let startX = 0;
+            let scrollLeftStart = 0;
 
 
-  scroller.addEventListener('wheel', e => {
-    if (Math.abs(e.deltaX) > Math.abs(e.deltaY)) {
-      
-      e.preventDefault();
-      scroller.scrollLeft += e.deltaX;
-    }
-  }, { passive: false });
+            scroller.addEventListener('pointerdown', e => {
+              isDown = true;
+              scroller.style.cursor = 'grabbing';
+              startX = e.clientX;
+              scrollLeftStart = scroller.scrollLeft;
+              if (scroller.setPointerCapture) scroller.setPointerCapture(e.pointerId);
+            });
+
+            scroller.addEventListener('pointermove', e => {
+              if (!isDown) return;
+              const dx = e.clientX - startX;
+              scroller.scrollLeft = scrollLeftStart - dx;
+            });
+
+            const stopDrag = e => {
+              if (!isDown) return;
+              isDown = false;
+              scroller.style.cursor = 'grab';
+              try { scroller.releasePointerCapture(e.pointerId); } catch {}
+            };
+            scroller.addEventListener('pointerup', stopDrag);
+            scroller.addEventListener('pointercancel', stopDrag);
+            scroller.addEventListener('pointerleave', stopDrag);
 
 
-  function cardWidth() {
-    const card = scroller.querySelector('.poster-card');
-    const gap = parseFloat(getComputedStyle(scroller).gap) || 16;
-    return (card ? card.getBoundingClientRect().width : 500) + gap;
-  }
-  btnPrev.addEventListener('click', () => scroller.scrollBy({ left: -cardWidth(), behavior: 'smooth' }));
-  btnNext.addEventListener('click', () => scroller.scrollBy({ left:  cardWidth(), behavior: 'smooth' }));
+            scroller.addEventListener('wheel', e => {
+              if (Math.abs(e.deltaX) > Math.abs(e.deltaY)) {
+                
+                e.preventDefault();
+                scroller.scrollLeft += e.deltaX;
+              }
+            }, { passive: false });
 
 
-  setInterval(() => {
-    const card = scroller.querySelector('.poster-card');
-    const gap = parseFloat(getComputedStyle(scroller).gap) || 16;
-    const cardWidth = (card ? card.getBoundingClientRect().width : 500) + gap;
-    scroller.scrollBy({ left: cardWidth, behavior: 'smooth' });
+            function cardWidth() {
+              const card = scroller.querySelector('.poster-card');
+              const gap = parseFloat(getComputedStyle(scroller).gap) || 16;
+              return (card ? card.getBoundingClientRect().width : 500) + gap;
+            }
+            btnPrev.addEventListener('click', () => scroller.scrollBy({ left: -cardWidth(), behavior: 'smooth' }));
+            btnNext.addEventListener('click', () => scroller.scrollBy({ left:  cardWidth(), behavior: 'smooth' }));
 
-    if (scroller.scrollLeft + scroller.clientWidth >= scroller.scrollWidth - 5) {
-      scroller.scrollTo({ left: 0, behavior: 'smooth' });
-    }
-  }, 5000);
-});
+
+            setInterval(() => {
+              const card = scroller.querySelector('.poster-card');
+              const gap = parseFloat(getComputedStyle(scroller).gap) || 16;
+              const cardWidth = (card ? card.getBoundingClientRect().width : 500) + gap;
+              scroller.scrollBy({ left: cardWidth, behavior: 'smooth' });
+
+              if (scroller.scrollLeft + scroller.clientWidth >= scroller.scrollWidth - 5) {
+                scroller.scrollTo({ left: 0, behavior: 'smooth' });
+              }
+            }, 5000);
+          });
         </script>
     </body>
 </html>
