--- a/news.html
+++ b/news.html
@@ -1,8 +1,16 @@
 <html>
     <head>
-        <title>AND - PHILOSOPHY</title>
+        <title>AND - NEWS</title>
         <link rel="icon" href="/img/logo.png">
         <link href="styles/style.css" rel="stylesheet" type="text/css" />
+        <script src="https://www.gstatic.com/firebasejs/10.14.1/firebase-app.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/10.14.1/firebase-firestore.js"></script>
+        <style>
+            body { font-family: sans-serif; margin: 40px; }
+            input, textarea { width: 100%; margin: 5px 0; padding: 10px; }
+            button { padding: 8px 15px; }
+            .post { border-bottom: 1px solid #ccc; margin-top: 10px; padding-bottom: 10px; }
+        </style>
     </head>
     <body>
         <div style="height: 5000px; overflow-y: scroll;">
@@ -21,5 +29,14 @@
                 </ui>
             </div>
         </div>
+
+
+        <h1>📋 간단 게시판</h1>
+        <input id="title" placeholder="제목">
+        <textarea id="content" placeholder="내용"></textarea>
+        <button onclick="savePost()">글 올리기</button>
+        <hr>
+        <div id="posts"></div>
+        <script src="script.js"></script>
     </body>
 </html>
