--- a/news.html
+++ b/news.html
@@ -31,7 +31,7 @@
         </div>
 
 
-        <h1>📋 간단 게시판</h1>
+        <h1>간단 게시판</h1>
         <input id="title" placeholder="제목">
         <textarea id="content" placeholder="내용"></textarea>
         <button onclick="savePost()">글 올리기</button>
