--- a/index.html
+++ b/index.html
@@ -104,6 +104,28 @@
         <b>IT'S NOT NAZI OR ANARCHISM SYMBOL</b>
         <div><img src="img/flag2.png"></div>
     </div>
+
+    <div class="wrap" style="text-align: center;">
+      <div><img src="img/symbol.png"></div>
+      <h1>ANTI RELIGION ACTION</h1>
+      <p><strong>JESUS IS HIPPIE</strong></p>
+      <p><strong>GOD IS DEVIL</strong></p>
+      <p><strong>SATAN IS ANGEL</strong></p>
+      <p>seeing war or obitury, believer says it's just what we have to overcome</p>
+      <p>They are lying. A lot of tragedy incidents(Hundred Years' War, Thirty Years' War so on) comes from RELIGION</p>
+      <p>A lot of suppression and degeneration comes from RELIGION</p>
+      <p>They stopped science progress and blocked people's liberty. They made anthropocene blind</p>
+      <p>They say there is only god, but why their interpretation is different each religion?</p>
+      <p>They're just following Novel</p>
+      <p>Nietzsche killed god and he became god</p>
+      <p>We killed god and we became god</p>
+      <p>We're doing suicide? But They says it is not allowed suicide</p>
+      <p>Fundamental theory is wrong.</p>
+      <p>They consisted thievery, murder</p>
+      <p><strong>JESUS IS HIPPIE</strong></p>
+      <p><strong>GOD IS DEVIL</strong></p>
+      <p><strong>SATAN IS ANGEL</strong></p>
+    </div>
   </div>
 
   <script>
