--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
       <p><strong>JESUS IS HIPPIE</strong></p>
       <p><strong>GOD IS DEVIL</strong></p>
       <p><strong>SATAN IS ANGEL</strong></p>
+      <div><img src="img/ANTI1.jpg"></div>
       <p>seeing war or obitury, believer says it's just what we have to overcome</p>
       <p>They are lying. A lot of tragedy incidents(Hundred Years' War, Thirty Years' War so on) comes from RELIGION</p>
       <p>A lot of suppression and degeneration comes from RELIGION</p>
@@ -122,6 +123,7 @@
       <p>We're doing suicide? But They says it is not allowed suicide</p>
       <p>Fundamental theory is wrong.</p>
       <p>They consisted thievery, murder</p>
+      <div><img src="img/ANTI2.jpg"></div>
       <p><strong>JESUS IS HIPPIE</strong></p>
       <p><strong>GOD IS DEVIL</strong></p>
       <p><strong>SATAN IS ANGEL</strong></p>
