--- a/news.html
+++ b/news.html
@@ -47,8 +47,8 @@
 
           <script type="module">
             import { initializeApp } from "https://www.gstatic.com/firebasejs/10.14.1/firebase-app.js";
-            import { getFirestore, collection, addDoc, getDocs, query, orderBy, deleteDoc, doc } 
-            from "https://www.gstatic.com/firebasejs/10.14.1/firebase-firestore.js";
+        import { getFirestore, collection, addDoc, getDocs, query, orderBy, deleteDoc, doc, getDoc 
+        } from "https://www.gstatic.com/firebasejs/10.14.1/firebase-firestore.js";
 
             // Import the functions you need from the SDKs you need
             // TODO: Add SDKs for Firebase products that you want to use
